# goutils

./: .circleci.yaml  .gitignore  .golangci.yml  .goreleaser.yaml  .travis.yml  BUILD.bazel  CHANGELOG  Dockerfile  Gopkg.toml  LICENSE  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bazel  deps.bzl  gazelle.sh  go.mod  go.sum  hotp.go  hotp_test.go  mru.go  mru_test.go  oath.go  otp.go  otp_test.go  release-docker.sh  timestamps.go  timestamps_internal_test.go  timestamps_test.go  totp.go  totp_test.go  yubikey.go
.circleci/: config.yml
.github/workflows/: release.yml
ThreatDragonModels/goutils threat model/: goutils threat model.json
ahash/: BUILD.bazel  ahash.go  ahash_test.go
assert/: BUILD.bazel  assert.go
backoff/: backoff.go  backoff_test.go
cache/lru/: lru.go  lru_internal_test.go  timestamps.go  timestamps_internal_test.go
cache/mru/: mru.go  mru_internal_test.go  timestamps.go  timestamps_internal_test.go
certlib/: BUILD.bazel  certlib.go  certlib_test.go  der_helpers.go  ed25519.go  fetch.go  helpers.go  keymatch.go  keymatch_test.go  sct.go
certlib/bundler/: bundler.go
certlib/certerr/: BUILD.bazel  doc.go  errors.go  errors_test.go
certlib/certgen/: config.go  config_test.go  keygen.go  ku.go  testca.go  testca_test.go
certlib/dump/: dump.go
certlib/hosts/: hosts.go  hosts_test.go
certlib/pkcs7/: BUILD.bazel  pkcs7.go
certlib/revoke/: BUILD.bazel  revoke.go  revoke_test.go
certlib/ski/: ski.go
certlib/testdata/: cert1.pem  cert2.pem  ec-ca-cert.csr  ec-ca-cert.pem  ec-ca-priv.pem  ec-ca.yaml  priv1.pem  priv2.pem  rsa-ca-cert.csr  rsa-ca-cert.pem  rsa-ca-priv.pem  rsa-ca.yaml
certlib/verify/: check.go  verify.go
cmd/atping/: BUILD.bazel  README  main.go
cmd/bcuz/: README  main.go
cmd/ca-signed/: README.txt  main.go
cmd/ca-signed/testdata/: gts-r1.pem
cmd/ccfind/: main.go
cmd/cert-bundler/: Dockerfile  README.txt  main.go  prompt.txt
cmd/cert-bundler/testdata/: bundle.yaml
cmd/cert-bundler/testdata/pems/: goog-wr2.pem  le-e7.pem
cmd/cert-bundler/testdata/pkg/: bundle.sha256  core_certs.tgz  google_certs.tgz
cmd/cert-revcheck/: README.txt  main.go
cmd/certchain/: BUILD.bazel  certchain.go  main.go
cmd/certdump/: BUILD.bazel  README  certdump.go  main.go  util.go
cmd/certexpiry/: BUILD.bazel  README  main.go
cmd/certser/: main.go
cmd/certverify/: BUILD.bazel  README  main.go
cmd/cleankbf/: main.go
cmd/clustersh/: BUILD.bazel  main.go
cmd/cruntar/: BUILD.bazel  README  main.go
cmd/csrpubdump/: BUILD.bazel  main.go  pubdump.go
cmd/data_sync/: README  main.go
cmd/diskimg/: BUILD.bazel  README  main.go
cmd/dumpbytes/: main.go
cmd/eig/: BUILD.bazel  main.go
cmd/fragment/: BUILD.bazel  README  fragment.go  main.go
cmd/git-sync/: main.go
cmd/host/: README  main.go
cmd/jlp/: BUILD.bazel  jlp.go  main.go
cmd/kgz/: BUILD.bazel  README  main.go
cmd/minmax/: README  main.go  minmax.go
cmd/parts/: BUILD.bazel  README  main.go
cmd/pem2bin/: BUILD.bazel  main.go
cmd/pembody/: BUILD.bazel  README  main.go  pembody.go
cmd/pemit/: BUILD.bazel  main.go
cmd/readchain/: BUILD.bazel  chain.go  main.go
cmd/renfnv/: BUILD.bazel  main.go  renfnv.go
cmd/rhash/: BUILD.bazel  README  main.go
cmd/rolldie/: main.go
cmd/rsha256/: main.go
cmd/showimp/: BUILD.bazel  main.go
cmd/ski/: BUILD.bazel  README  main.go
cmd/sprox/: BUILD.bazel  main.go
cmd/stealchain/: BUILD.bazel  main.go  thief.go
cmd/stealchain-server/: BUILD.bazel  README  main.go
cmd/subjhash/: BUILD.bazel  README  main.go
cmd/tlsinfo/: README.txt  main.go
cmd/tlskeypair/: BUILD.bazel  main.go
cmd/utc/: BUILD.bazel  README  main.go
cmd/yamll/: BUILD.bazel  README  main.go
cmd/zsearch/: main.go
config/: BUILD.bazel  config.go  config_test.go  path.go  path_linux.go  path_test.go
config/iniconf/: BUILD.bazel  iniconf.go  iniconf_test.go
config/testdata/: test.env
dbg/: BUILD.bazel  dbg.go  dbg_test.go
die/: BUILD.bazel  die.go
fileutil/: BUILD.bazel  fileutil.go  fileutil_windows.go  symlinks.go
lib/: BUILD.bazel  defs.go  dialer.go  fetch.go  ftime_bsd.go  ftime_unix.go  lib.go  lib_test.go
lib/dialer/: dialer.go
lib/duration/: duration.go
lib/fetch/: fetch.go
log/: BUILD.bazel  logger.go
logging/: BUILD.bazel  doc.go  example_test.go  file.go  levels.go  log.go  log_test.go
logging/example/: BUILD.bazel  example.go  logger.go
modhex/: example_test.go  modhex.go  modhex_test.go
mru/: README.md  go.mod  go.sum
msg/: msg.go  msg_test.go
mwc/: BUILD.bazel  mwc.go  mwc_test.go
rand/: BUILD.bazel  rand.go  rand_test.go
sbuf/: BUILD.bazel  sbuf.go  sbuf_test.go
seekbuf/: BUILD.bazel  seekbuf.go  seekbuf_test.go
syslog/: BUILD.bazel  logger.go
tee/: BUILD.bazel  tee.go  tee_test.go
testio/: BUILD.bazel  README.md  testio.go  testio_test.go
testutil/: BUILD.bazel
totpc/: totpc.go
twofactor/: README.md  doc.go  go.sum  hotp.go  hotp_internal_test.go  oath.go  oath_internal_test.go  otp.go  otp_internal_test.go  totp.go  totp_internal_test.go  totp_test.go  util.go  util_test.go
twofactor/.circleci/: config.yml
