load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "config",
    srcs = [
        "config.go",
        "path.go",
        "path_linux.go",
    ],
    importpath = "git.wntrmute.dev/kyle/goutils/config",
    visibility = ["//visibility:public"],
    deps = ["//config/iniconf"],
)

go_test(
    name = "config_test",
    size = "small",
    srcs = [
        "config_test.go",
        "path_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":config"],
)
