load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "dbg",
    srcs = ["dbg.go"],
    importpath = "git.wntrmute.dev/kyle/goutils/dbg",
    visibility = ["//visibility:public"],
)

go_test(
    name = "dbg_test",
    srcs = ["dbg_test.go"],
    embed = [":dbg"],
    deps = [
        "@com_github_stretchr_testify//require",
        "@ht_sr_git_kisom_goutils//testio:go_default_library",
    ],
)
