load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "sbuf",
    srcs = ["sbuf.go"],
    importpath = "git.wntrmute.dev/kyle/goutils/sbuf",
    visibility = ["//visibility:public"],
)

go_test(
    name = "sbuf_test",
    srcs = ["sbuf_test.go"],
    embed = [":sbuf"],
    deps = ["@org_golang_x_crypto//nacl/box"],
)
