load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "syslog",
    srcs = ["logger.go"],
    importpath = "git.wntrmute.dev/kyle/goutils/syslog",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_davecgh_go_spew//spew",
        "@com_github_hashicorp_go_syslog//:go-syslog",
    ],
)
