load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "revoke",
    srcs = ["revoke.go"],
    importpath = "git.wntrmute.dev/kyle/goutils/certlib/revoke",
    visibility = ["//visibility:public"],
    deps = [
        "//certlib",
        "//log",
        "@org_golang_x_crypto//ocsp",
    ],
)

go_test(
    name = "revoke_test",
    srcs = ["revoke_test.go"],
    embed = [":revoke"],
)
