load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "atping_lib",
    srcs = ["main.go"],
    importpath = "git.wntrmute.dev/kyle/goutils/cmd/atping",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "atping",
    embed = [":atping_lib"],
    visibility = ["//visibility:public"],
)
