load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "certchain_lib",
    srcs = ["certchain.go"],
    importpath = "git.wntrmute.dev/kyle/goutils/cmd/certchain",
    visibility = ["//visibility:private"],
    deps = ["//die"],
)

go_binary(
    name = "certchain",
    embed = [":certchain_lib"],
    visibility = ["//visibility:public"],
)
