load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "certexpiry_lib",
    srcs = ["main.go"],
    importpath = "git.wntrmute.dev/kyle/goutils/cmd/certexpiry",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_cloudflare_cfssl//helpers",
        "@ht_sr_git_kisom_goutils//die:go_default_library",
        "@ht_sr_git_kisom_goutils//lib:go_default_library",
    ],
)

go_binary(
    name = "certexpiry",
    embed = [":certexpiry_lib"],
    visibility = ["//visibility:public"],
)
