load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "certexpiry_lib",
    srcs = ["main.go"],
    importpath = "git.wntrmute.dev/kyle/goutils/cmd/certexpiry",
    visibility = ["//visibility:private"],
    deps = [
        "//certlib",
        "//die",
        "//lib",
    ],
)

go_binary(
    name = "certexpiry",
    embed = [":certexpiry_lib"],
    visibility = ["//visibility:public"],
)
