load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "certverify_lib",
    srcs = ["main.go"],
    importpath = "git.wntrmute.dev/kyle/goutils/cmd/certverify",
    visibility = ["//visibility:private"],
    deps = [
        "//certlib",
        "//certlib/revoke",
        "//die",
        "//lib",
    ],
)

go_binary(
    name = "certverify",
    embed = [":certverify_lib"],
    visibility = ["//visibility:public"],
)
