load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "clustersh_lib",
    srcs = ["main.go"],
    importpath = "git.wntrmute.dev/kyle/goutils/cmd/clustersh",
    visibility = ["//visibility:private"],
    deps = [
        "//lib",
        "@com_github_pkg_sftp//:sftp",
        "@org_golang_x_crypto//ssh",
        "@org_golang_x_crypto//ssh/agent",
    ],
)

go_binary(
    name = "clustersh",
    embed = [":clustersh_lib"],
    visibility = ["//visibility:public"],
)
