load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cruntar_lib",
    srcs = ["main.go"],
    importpath = "git.wntrmute.dev/kyle/goutils/cmd/cruntar",
    visibility = ["//visibility:private"],
    deps = ["@ht_sr_git_kisom_goutils//die:go_default_library"],
)

go_binary(
    name = "cruntar",
    embed = [":cruntar_lib"],
    visibility = ["//visibility:public"],
)
