load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "csrpubdump_lib",
    srcs = ["pubdump.go"],
    importpath = "git.wntrmute.dev/kyle/goutils/cmd/csrpubdump",
    visibility = ["//visibility:private"],
    deps = ["@ht_sr_git_kisom_goutils//die:go_default_library"],
)

go_binary(
    name = "csrpubdump",
    embed = [":csrpubdump_lib"],
    visibility = ["//visibility:public"],
)
