load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "diskimg_lib",
    srcs = ["main.go"],
    importpath = "git.wntrmute.dev/kyle/goutils/cmd/diskimg",
    visibility = ["//visibility:private"],
    deps = [
        "//ahash",
        "//dbg",
        "//die",
    ],
)

go_binary(
    name = "diskimg",
    embed = [":diskimg_lib"],
    visibility = ["//visibility:public"],
)
