load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "eig_lib",
    srcs = ["main.go"],
    importpath = "git.wntrmute.dev/kyle/goutils/cmd/eig",
    visibility = ["//visibility:private"],
    deps = ["//die"],
)

go_binary(
    name = "eig",
    embed = [":eig_lib"],
    visibility = ["//visibility:public"],
)
