load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "fragment_lib",
    srcs = ["fragment.go"],
    importpath = "git.wntrmute.dev/kyle/goutils/cmd/fragment",
    visibility = ["//visibility:private"],
    deps = ["//die"],
)

go_binary(
    name = "fragment",
    embed = [":fragment_lib"],
    visibility = ["//visibility:public"],
)
