load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "jlp_lib",
    srcs = ["jlp.go"],
    importpath = "git.wntrmute.dev/kyle/goutils/cmd/jlp",
    visibility = ["//visibility:private"],
    deps = ["//lib"],
)

go_binary(
    name = "jlp",
    embed = [":jlp_lib"],
    visibility = ["//visibility:public"],
)
